# smesh

./: .travis.build.sh  .travis.yml  CMakeLists.txt  NEWS  README.md  appveyor.yml
ci/conda/: bld.bat  build.sh  meta.yaml  run_test.sh
doc/src/: CMakeLists.txt  Doxyfile.in
inc/: Basics_Utils.hxx  DriverCGNS_Read.hxx  DriverCGNS_Write.hxx  DriverSTL_R_SMDS_Mesh.h  DriverSTL_W_SMDS_Mesh.h  GeomSelectionTools.h  NETGENPlugin_Mesher.hxx  SMDS_Mesh.hxx  SMDS_MeshElement.hxx  SMDS_MeshInfo.hxx  SMDS_MeshNode.hxx  SMDS_TypeOfPosition.hxx  SMDS_UnstructuredGrid.hxx  SMDS_VolumeTool.hxx  SMESHDS_DataMapOfShape.hxx  SMESH_Actor.h  SMESH_ActorDef.h  SMESH_ActorUtils.h  SMESH_AdvOptionsWdg.h  SMESH_Algo.hxx  SMESH_Array1.hxx  SMESH_Array2.hxx  SMESH_Block.hxx  SMESH_CellLabelActor.h  SMESH_Client.hxx  SMESH_ComputeError.hxx  SMESH_ControlsDef.hxx  SMESH_DeviceActor.h  SMESH_ExtractGeometry.h  SMESH_FaceOrientationFilter.h  SMESH_Gen.hxx  SMESH_Hypothesis.hxx  SMESH_IndexedDataMapOfShapeIndexedMapOfShape.hxx  SMESH_IndexedMap.hxx  SMESH_MAT2d.hxx  SMESH_Mesh.hxx  SMESH_MeshAlgos.hxx  SMESH_MeshEditor.hxx  SMESH_MeshVSLink.hxx  SMESH_MeshVSLink.ixx  (+48 more)
netgen-5.3.1/: Makefile.in  config.h.in  configure  configure.ac
netgen-5.3.1/libsrc/csg/: Makefile.in
netgen-5.3.1/libsrc/general/: Makefile.in
netgen-5.3.1/libsrc/interface/: Makefile.in
netgen-5.3.1/ng/: Makefile.in
netgen-5.3.1/nglib/: Makefile.in
netgen-5.3.1/windows/: Makefile.in
pkg/conda/: build.sh  meta.yaml
smesh/src/Controls/: SMESH_Controls.cpp
smesh/src/NETGENPlugin/: NETGENPlugin_Hypothesis.cpp  NETGENPlugin_Hypothesis_2D.cpp  NETGENPlugin_SimpleHypothesis_2D.cpp
smesh/src/SMDS/: SMDS_Mesh.cpp  SMDS_MeshGroup.cpp
smesh/src/SMESH/: SMESH_Mesh.cpp  SMESH_MeshEditor.cpp  SMESH_subMesh.cpp
smesh/src/SMESHDS/: SMESHDS_Command.cpp  SMESHDS_Mesh.cpp
smesh/src/StdMeshers/: StdMeshers_Distribution.cpp  StdMeshers_LocalLength.cpp  StdMeshers_MaxElementArea.cpp  StdMeshers_Penta_3D.cpp  StdMeshers_SegmentLengthAroundVertex.cpp
src/: CMakeLists.txt
src/Controls/: SMESH_Controls.cpp  SMESH_Controls.cxx
src/DriverCGNS/: DriverCGNS_Read.cxx  DriverCGNS_Write.cxx
src/DriverDAT/: DriverDAT_R_SMDS_Mesh.cpp  DriverDAT_R_SMDS_Mesh.cxx  DriverDAT_W_SMDS_Mesh.cpp  DriverDAT_W_SMDS_Mesh.cxx
src/DriverGMF/: DriverGMF_Read.cxx  DriverGMF_Write.cxx
src/DriverMED/: DriverMED_Family.cxx  DriverMED_R_SMESHDS_Mesh.cxx  DriverMED_W_SMESHDS_Mesh.cxx
src/DriverSTL/: DriverSTL_R_SMDS_Mesh.cpp  DriverSTL_R_SMDS_Mesh.cxx  DriverSTL_W_SMDS_Mesh.cxx
src/DriverUNV/: DriverUNV_R_SMDS_Mesh.cpp  DriverUNV_R_SMDS_Mesh.cxx  DriverUNV_W_SMDS_Mesh.cxx
src/MEFISTO2/: aptrte.cpp  f2c.h  trte.c
src/NETGENPlugin/: NETGENPlugin_Hypothesis.cpp  NETGENPlugin_Hypothesis_2D.cpp  NETGENPlugin_Mesher.cpp  NETGENPlugin_NETGEN_2D_ONLY.cpp  NETGENPlugin_NETGEN_3D.cpp  NETGENPlugin_SimpleHypothesis_2D.cpp  NETGENPlugin_SimpleHypothesis_3D.cpp
src/OBJECT/: SMESH_Actor.cxx  SMESH_ActorUtils.cxx  SMESH_CellLabelActor.cxx  SMESH_DeviceActor.cxx  SMESH_ExtractGeometry.cxx  SMESH_FaceOrientationFilter.cxx  SMESH_NodeLabelActor.cxx  SMESH_Object.cxx  SMESH_PreviewActorsCollection.cxx  SMESH_SVTKActor.cxx  SMESH_ScalarBarActor.cxx
src/SMDS/: Notes  SMDS_MemoryLimit.cxx  SMDS_Mesh.cpp  SMDS_Mesh.cxx  SMDS_MeshElementIDFactory.cxx  SMDS_MeshGroup.cpp  SMDS_MeshNode.cpp  SMDS_MeshNode.cxx  SMDS_VolumeTool.cxx  SMDS_VtkCellIterator.cxx  chrono.cxx
src/SMESH/: GEOMUtils.cxx  SMESH_Algo.cxx  SMESH_Block.cpp  SMESH_Gen.cpp  SMESH_Gen.cxx  SMESH_Hypothesis.cxx  SMESH_Mesh.cpp  SMESH_Mesh.cxx  SMESH_MeshEditor.cpp  SMESH_MeshEditor.cxx  SMESH_MeshVSLink.cpp  SMESH_MeshVSLink2.cpp  SMESH_MesherHelper.cpp  SMESH_MesherHelper.cxx  SMESH_Pattern.cpp  SMESH_Pattern.cxx  SMESH_subMesh.cpp  SMESH_subMesh.cxx  Utils_ExceptHandlers.cxx
src/SMESHDS/: SMESHDS_Command.cpp  SMESHDS_GroupOnGeom.cpp  SMESHDS_Mesh.cpp
src/SMESHUtils/: SMESH_Block.cxx  SMESH_File.cxx  SMESH_MAT2d.cxx  SMESH_MeshAlgos.cxx  SMESH_OctreeNode.cxx
src/StdMeshers/: StdMeshers_Adaptive1D.cxx  StdMeshers_Arithmetic1D.cpp  StdMeshers_Arithmetic1D.cxx  StdMeshers_AutomaticLength.cpp  StdMeshers_AutomaticLength.cxx  StdMeshers_CartesianParameters3D.cxx  StdMeshers_Cartesian_3D.cxx  StdMeshers_CompositeHexa_3D.cpp  StdMeshers_CompositeSegment_1D.cpp  StdMeshers_CompositeSegment_1D.cxx  StdMeshers_Deflection1D.cpp  StdMeshers_Deflection1D.cxx  StdMeshers_Distribution.cpp  StdMeshers_Distribution.cxx  StdMeshers_FaceSide.cpp  StdMeshers_FaceSide.cxx  StdMeshers_FixedPoints1D.cpp  StdMeshers_FixedPoints1D.cxx  StdMeshers_Geometric1D.cxx  StdMeshers_HexaFromSkin_3D.cxx  StdMeshers_Hexa_3D.cpp  StdMeshers_Hexa_3D.cxx  StdMeshers_Import_1D.cxx  StdMeshers_Import_1D2D.cxx  StdMeshers_LayerDistribution.cxx  StdMeshers_LayerDistribution2D.cxx  StdMeshers_LengthFromEdges.cpp  StdMeshers_LengthFromEdges.cxx  StdMeshers_LocalLength.cpp  StdMeshers_LocalLength.cxx  StdMeshers_MEFISTO_2D.cxx  StdMeshers_MaxElementArea.cpp  StdMeshers_MaxElementArea.cxx  StdMeshers_MaxElementVolume.cpp  StdMeshers_MaxElementVolume.cxx  StdMeshers_MaxLength.cpp  StdMeshers_MaxLength.cxx  StdMeshers_NumberOfLayers.cpp  StdMeshers_NumberOfLayers.cxx  StdMeshers_NumberOfLayers2D.cxx  (+32 more)
test/: CMakeLists.txt
test/CreateMesh_test/: CMakeLists.txt  CreateMesh_test.cpp
test/MeshBasicGeometries_test/: CMakeLists.txt  MeshBasicGeometries_test.cpp
test/SMESHArray1_test/: CMakeLists.txt  SMESHArray1_test.cpp
test/STL2Mesh_test/: CMakeLists.txt  STL2Mesh_test.cpp  STL2Mesh_test_config.h.cmake  cube_ascii.stl
